--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 
                             <div class="row mt-4 justify-content-center">
                                 <div class="col-xl-4 col-lg-4">
-                                    <a id="get_tkt" href="./register.html" style="font-family: tedFont;">Get Tickets
-                                        Now</a>
+                                    <a id="get_tkt" href="./register.html" style="font-family: tedFont;">Buy Tickets</a>
                                 </div>
 
                             </div>
