--- a/index.html
+++ b/index.html
@@ -324,6 +324,27 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="col-lg-3 col-md-6 col-9">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                    <div data-tilt class="thumb">
+                                        <a href="./speakers.html">
+                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                                src="img/Speaker Photos/vaisakhanthampi.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="performer_heading">
+                                        <h4>Vaisakhan Thampi</h4>
+                                        <!-- <span>Cricketer</span> -->
+                                        <div>
+                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/vaisakhan.thampi" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
