--- a/speakers.html
+++ b/speakers.html
@@ -159,7 +159,7 @@
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                        src="img/Speaker Photos/kiyosaki.jpg" alt="">
+                                            src="img/Speaker Photos/kiyosaki.jpg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -218,7 +218,7 @@
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                        src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
+                                            src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
@@ -535,6 +535,55 @@
                     </div>
                 </div>
             </div>
+
+            <div id="p11">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
+                                data-wow-delay=".3s">Vaisakhan Thampi
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/vaisakhanthampi.jpg" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/vaisakhan.thampi" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            Vaisakhan Thampi is an Assistant Professor of Physics. Holding a doctoral
+                                            degree in Material Science, He has authored numerous research journals and
+                                            books on Science. An ardent orator on Science and Humanity, He is shaping up
+                                            to be one of the most astute minds of our state.
+
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div>
                 <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
             </div>
@@ -619,7 +668,7 @@
                                             <a style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/jomarshal.music/"
                                                 style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
+                                            <a href="https://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
                                                 style="color: aliceblue;" class="fa fa-youtube"></a>
 
                                         </div>
@@ -760,6 +809,7 @@
         //$('#p8').hide();
         //$('#p9').hide();
        // $('#p10').hide();
+       //$('#p11').hide();
 
     </script>
 </body>
