--- a/index.html
+++ b/index.html
@@ -337,37 +337,40 @@
                                         <h4>Vaisakhan Thampi</h4>
                                         <!-- <span>Cricketer</span> -->
                                         <div>
-                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="https://www.facebook.com/vaisakhan.thampi" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/vaisakhan.thampi"
+                                                style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-3 col-md-6 col-9">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div data-tilt class="thumb">
-                                    <a href="./speakers.html">
-                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/Kiyosaki 2.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Robert Kiyosaki</h4>
-                                    <div>
-                                        <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
-                                            class="fa fa-twitter"></a>
-                                        <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                            class="fa fa-facebook"></a>
-                                        <a href="https://www.instagram.com/therealkiyosaki/" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
-                                        <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                            style="color: aliceblue;" class="fa fa-youtube"></a>
+                            <div class="col-lg-3 col-md-6 col-9">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <a href="./speakers.html">
+                                            <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                                src="img/Speaker Photos/Kiyosaki.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="performer_heading">
+                                        <h4>Robert Kiyosaki</h4>
+                                        <div>
+                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/therealkiyosaki/"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
 
                             <!-- <div class="col-lg-3 col-md-6 col-9">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
@@ -679,28 +682,28 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
-                            class="card-img-top" src="./img/tedteam/Akash Vijayan.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title" style="color: white; text-align: center;">AKASH VIJAYAN</h5>
-                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
-                            <p class="card-text"></p>
+                    <div class="col-lg-3 col-md-6 col-6">
+                        <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                            <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
+                                class="card-img-top" src="./img/tedteam/Akash Vijayan.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title" style="color: white; text-align: center;">AKASH VIJAYAN</h5>
+                                <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
+                                <p class="card-text"></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-6">
-                    <div class="card" style="background-color: black; padding: 10%; height: 350px;">
-                        <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
-                            class="card-img-top" src="./img/tedteam/Vishnu manikantan.jpeg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title" style="color: white; text-align: center;">VISHNU MANIKANTAN</h5>
-                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
-                            <p class="card-text"></p>
+                    <div class="col-lg-3 col-md-6 col-6">
+                        <div class="card" style="background-color: black; padding: 10%; height: 350px;">
+                            <img style="object-fit:cover; max-width: 150px; height: 150px; margin-left: auto; margin-right: auto;"
+                                class="card-img-top" src="./img/tedteam/Vishnu manikantan.jpeg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title" style="color: white; text-align: center;">VISHNU MANIKANTAN</h5>
+                                <h6 style="color: whitesmoke; text-align: center;" class="card-text">WEB DEV</h6>
+                                <p class="card-text"></p>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
