--- a/speakers.html
+++ b/speakers.html
@@ -143,65 +143,7 @@
                 </div>
             </div>
             <!-- single performer end -->
-            <div id="p2">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="section_title mb-50">
-                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
-                                data-wow-delay=".3s">Robert Kiyosaki</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="col-lg-8">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-6">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div data-tilt class="thumb">
-                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/kiyosaki.jpg" alt="">
-                                    </div>
-                                    <div class="performer_heading">
-                                        <!-- <h4>write anything</h4> -->
-                                        <!-- <span>Acoustic drum</span> -->
-                                        <div>
-                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-twitter"></a>
-                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-facebook"></a>
-                                            <a href="https://www.instagram.com/therealkiyosaki/"
-                                                style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                                style="color: aliceblue;" class="fa fa-youtube"></a>
 
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                    <div>
-                                        <p>
-                                            Robert T. Kiyosaki is a writer, entrepreneur and the founder of the Rich Dad
-                                            Company. He is the author of “RICH DAD POOR DAD”, considered a holy-grail of
-                                            financial self-help books, it has influenced millions of people to change
-                                            their perspectives on financial literacy and money management. Robert has
-                                            earned an international reputation in straight talks, irreverence and
-                                            courage, and has become a passionate advocate of financial aptitude. With
-                                            his experience and teaching skills, he throttled up the minds of youth to
-                                            become financially educated and to take an active role in investing for the
-                                            future.
-                                            Watch him live, as he spreads the thought of money management at TEDxTKMCE.
-
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div id="p3">
                 <div class="row">
                     <div class="col-lg-8">
@@ -559,10 +501,13 @@
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;" class="fa fa-twitter"></a>
-                                            <a href="https://www.facebook.com/vaisakhan.thampi" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a href="https://twitter.com/dsvthampi?lang=en" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/vaisakhan.thampi"
+                                                style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a style="color: aliceblue;" class="fa fa-instagram"></a>
-                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                            <a href="https://www.youtube.com/c/VaisakhanThampi/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -575,6 +520,61 @@
                                             degree in Material Science, He has authored numerous research journals and
                                             books on Science. An ardent orator on Science and Humanity, He is shaping up
                                             to be one of the most astute minds of our state.
+
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="p2">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s"
+                                data-wow-delay=".3s">Robert Kiyosaki</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/kiyosaki.jpg" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/therealkiyosaki/"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            Robert T. Kiyosaki is a writer, entrepreneur and the founder of the Rich Dad
+                                            Company. He is the author of the famed financial self-help book “RICH DAD
+                                            POOR DAD”. Mr.Kiyosaki has earned an international reputation in straight
+                                            talks, irreverence and courage, and has become a passionate advocate of
+                                            financial aptitude.Through his words, he has Influenced millions of people
+                                            in making better financial and investment decisions in their life.
 
                                         </p>
                                     </div>
@@ -800,7 +800,7 @@
 
     <script>
         // $('#p1').hide();
-        $('#p2').hide();
+        //$('#p2').hide();
         // $('#p3').hide();
         $('#p4').hide();
         // $('#p5').hide();
