--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                                     <div data-tilt class="thumb">
                                         <a href="./speakers.html">
                                             <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                                src="img/Speaker Photos/Kiyosaki.jpg" alt="">
+                                                src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
                                         </a>
                                     </div>
                                     <div class="performer_heading">
