--- a/speakers.html
+++ b/speakers.html
@@ -545,7 +545,7 @@
                                 <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                     <div data-tilt class="thumb">
                                         <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
-                                            src="img/Speaker Photos/kiyosaki.jpg" alt="">
+                                            src="img/Speaker Photos/Kiyosaki.jpeg" alt="">
                                     </div>
                                     <div class="performer_heading">
                                         <!-- <h4>write anything</h4> -->
